# parded

./: README.md
AgenteAuditor/: Makefile  auditoragent
AgenteAuditor/src/: CMakeLists.txt  main.c
AgenteAuditor/src/include/: etcd.c
AgenteAuditor/src/main_old/: main copy.c.bkp  main copy.c.func  main.c(antes do etcd)  main.c.bkp  main.c.bkp_inicio_urutau
Dash2.0/: aviso.py  enriquecimento.py  getTORlist.py  graficos.py  readTorList.py  snortCreator.py  statusEAud.py  stixCreator.py  stixs.txt  torlist.csv
Dash2.0/assets/: estilo.css
